# course_work

./: CMakeLists.txt  course_work_GnatenkoTA.docx
lib/: CMakeLists.txt
lib/algorithms/: Algorithms.cpp  Algorithms.hpp  CMakeLists.txt
lib/drawing/: CMakeLists.txt  Drawing.cpp  Drawing.hpp
lib/pixel/: CMakeLists.txt  Pixel.cpp  Pixel.hpp
tests/: CMakeLists.txt  benchmark.hpp  benchmark_bresenham_float.cpp  benchmark_bresenham_int.cpp  benchmark_dda.cpp  benchmark_gs.cpp  benchmark_mid.cpp  benchmark_naive.cpp  benchmark_wu.cpp  brightness_tests.cpp  data.hpp  test.hpp  tests.cpp  tests_float.cpp
